tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari
type Save = has serialize() -> String;

fn main() -> i64 {
  return 0;
}
